new workout form

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,64 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.other-option {
+  line-height: 16px;
+  font-weight: normal;
+  text-align: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.other-option::before {
+  content: '';
+  flex: 1 1 10%;
+  border-bottom: 1px solid rgb(193, 200, 207);
+  margin: 0px 10px;
+  transform: translateY(-50%);
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.other-option::after {
+  content: '';
+  flex: 1 1 10%;
+  border-bottom: 1px solid rgb(193, 200, 207);
+  margin: 0px 10px;
+  transform: translateY(-50%);
+}
+
+.p-inputtext {
+  @apply block  rounded-md border-0 py-1.5  shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-600 sm:text-sm sm:leading-6;
+}
+
+.p-calendar {
+  @apply w-full;
+}
+
+.p-datepicker {
+  @apply mt-[0.15rem];
+}
+
+.p-datepicker-title {
+  @apply w-full flex justify-center items-center gap-2;
+}
+
+.p-datatable-tbody tr {
+  @apply w-full;
+}
+
+.p-datatable-tbody .p-editable-column:first-child {
+  @apply bg-red-400 w-auto;
+}
+
+.p-datatable-tbody .p-editable-column:not(:first-child) {
+  @apply bg-green-400 w-4;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
 }
